--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mime-db": "^1.49.0",
     "mime-types": "^2.1.32",
     "ms": "^2.0.0",
+    "multer": "^1.4.3",
     "negotiator": "^0.6.2",
     "nodemon": "^2.0.12",
     "object-assign": "^4.1.1",
