feat: add post rooms and socket.on rooms finally

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qs": "^6.7.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.4.0",
+    "redis": "^3.1.2",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
     "send": "^0.17.1",
@@ -64,6 +65,7 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid4": "^2.0.2",
     "vary": "^1.1.2",
     "ws": "^7.4.6"
   },
